# EstimEat-backend

./: README.md  preprocessing_notebook.py  pyproject.toml
models/building/: building_trend.csv  new_building.ipynb
models/demographie/: demo.ipynb
models/restaurant_localite/: locality_trends_poisson.csv  restau_poisson.ipynb  restaurant_count_by_locality.csv
models/score/: score.ipynb
models/score/res/: demo_trend_score_norma.csv  restau_trend_score.csv  restau_trend_score_norma.csv  third_sector_establishment_score_by_locality_norma.csv  third_sector_job_score_by_locality_norma.csv
res/: building_trend.csv  building_trend_norma.csv  demo_trend_score.csv  demo_trend_score_norma.csv  restau_trend_score.csv  restau_trend_score_norma.csv  restaurant_count_by_locality.csv  third_sector_establishment_score_by_locality.csv  third_sector_establishment_score_by_locality_norma.csv  third_sector_job_score_by_locality.csv  third_sector_job_score_by_locality_norma.csv
src/: establishment_per_sector_notebook.py  final_score_and_normalization.ipynb  main.py  model_train.py  restaurant_count_by_locality_notebook.py  restaurant_per_locality.ipynb  script.py  t01x-freq-bhf-gare-staz-stn-2024.csv  thir_sector_scores_per_locality_notebook.py  third_sector_scores_per_locality_notebook.py  trend_stations_traffic.csv
