[project]
name = "estimeat-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastexcel>=0.16.0",
    "geopandas>=1.1.1",
    "marimo>=0.17.0",
    "matplotlib>=3.10.7",
    "openpyxl>=3.1.5",
    "osmium>=4.1.1",
    "polars>=1.34.0",
    "pyarrow>=21.0.0",
]
